[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/guns/machinegun.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/IngameUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/guns/shotgun.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/guns/sniper.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.63
height = 1.8

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.15, 0.5 )

[node name="Player" type="KinematicBody" groups=["local_player"]]
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06402, 0 )

[node name="Camera" type="Camera" parent="Rotation_Helper"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
far = 1000.0

[node name="RayCast_gun" type="RayCast" parent="Rotation_Helper"]
cast_to = Vector3( 0, 0, 128 )

[node name="machinegun_target" type="Spatial" parent="Rotation_Helper"]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, -0.75, -0.661, 1.19 )

[node name="machinegun_target_zoom" type="Spatial" parent="Rotation_Helper"]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, -0.5, 1.25 )

[node name="machinegun_shoot_target" type="Spatial" parent="Rotation_Helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37171, 0 )
shape = SubResource( 2 )

[node name="shoot_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="reload_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="machinegun" parent="." instance=ExtResource( 2 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, -0.75, 0.403, 1.19 )
visible = false
player_path = NodePath("..")
ray_cast_path = NodePath("../Rotation_Helper/RayCast_gun")

[node name="shotgun" parent="." instance=ExtResource( 4 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, -0.75, 0.403, 1.19 )
visible = false
recoil = 0.8
player_path = NodePath("..")
ray_cast_path = NodePath("../Rotation_Helper/RayCast_gun")

[node name="sniper" parent="." instance=ExtResource( 5 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, -0.75, 0.403, 1.19 )
visible = false
player_path = NodePath("..")
ray_cast_path = NodePath("../Rotation_Helper/RayCast_gun")

[node name="GunRotationHelper" type="Spatial" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, -0.75, 0.403, 1.19 )

[node name="IngameUI" parent="." instance=ExtResource( 3 )]
